--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <header>
     <ul>
         <li>
-            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.5s" href="index.html">Home</a>
+            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.5s" href="/">Home</a>
+            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.5s" href=".">Home2</a>
+            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.5s" href="/">Home3</a>
             <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.6s" href="skills.html">Skills</a>
             <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.8s" href="experience.html">Experience</a>
             <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.7s" href="project.html">Projects</a>
