--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" integrity="sha256-PHcOkPmOshsMBC+vtJdVr5Mwb7r0LkSVJPlPrp/IMpU=" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha256-z6FznuNG1jo9PP3/jBjL6P3tvLMtSwiVAowZPOgo56U=" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        new WOW().init();
+    </script>
 </head>
 <body>
+
+<script type="text/javascript">
+    new WOW().init();
+</script>
 
 <!--particles-->
     <div id="particles-js">
@@ -27,6 +35,10 @@
         </li>
     </ul>
 </header>
+
+<script type="text/javascript">
+    new WOW().init();
+</script>
 
 <!--Home Section-->
 <section id="home" class="home wow fadeIn" data-wow-duration="0.9s" data-wow-delay=".2s">
