--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" integrity="sha256-PHcOkPmOshsMBC+vtJdVr5Mwb7r0LkSVJPlPrp/IMpU=" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha256-z6FznuNG1jo9PP3/jBjL6P3tvLMtSwiVAowZPOgo56U=" crossorigin="anonymous"></script>
-    
+    <!--<script type="text/javascript">-->
+        <!--new WOW().init();-->
+    <!--</script>-->
 </head>
 <body>
+
+<script type="text/javascript">
+    new WOW().init();
+</script>
 
 <!--particles-->
     <div id="particles-js">
@@ -30,6 +36,10 @@
     </ul>
 </header>
 
+<script type="text/javascript">
+    new WOW().init();
+</script>
+
 <!--Home Section-->
 <section id="home" class="home wow fadeIn" data-wow-duration="0.9s" data-wow-delay=".2s">
     <div class="name">
@@ -44,9 +54,17 @@
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha256-z6FznuNG1jo9PP3/jBjL6P3tvLMtSwiVAowZPOgo56U=" crossorigin="anonymous"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" integrity="sha256-+u54FaX9J+k40eAcg5K2YzICSQjrEYBI9gju5nE3HfY=" crossorigin="anonymous"></script>
 
 <script src="js/particle-script.js" ></script>
+
+
+<script type="text/javascript">
+    new WOW().init();
+    </script>
+
 
 </body>
 </html>
