--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
 
-<!--<script type="text/javascript">-->
-    <!--new WOW().init();-->
-<!--</script>-->
+<script type="text/javascript">
+    new WOW().init();
+</script>
 
 <!--particles-->
     <div id="particles-js">
