--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha256-z6FznuNG1jo9PP3/jBjL6P3tvLMtSwiVAowZPOgo56U=" crossorigin="anonymous"></script>
     <script type="text/javascript">
+        console.log("xxxx");
         new WOW().init();
     </script>
 </head>
 <body>
 
 <script type="text/javascript">
+    console.log("rrrr");
     new WOW().init();
 </script>
 
@@ -37,6 +39,7 @@
 </header>
 
 <script type="text/javascript">
+    console.log("testrrr");
     new WOW().init();
 </script>
 
@@ -62,6 +65,7 @@
 
 
 <script type="text/javascript">
+    console.log("test123");
     new WOW().init();
     </script>
 
