--- a/index.html
+++ b/index.html
@@ -8,19 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" integrity="sha256-PHcOkPmOshsMBC+vtJdVr5Mwb7r0LkSVJPlPrp/IMpU=" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha256-z6FznuNG1jo9PP3/jBjL6P3tvLMtSwiVAowZPOgo56U=" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        console.log("xxxx");
-        new WOW().init();
-    </script>
 </head>
 <body>
-
-<script type="text/javascript">
-    console.log("rrrr");
-    new WOW().init();
-</script>
-
 <!--particles-->
     <div id="particles-js">
     </div>
@@ -39,15 +28,14 @@
 </header>
 
 <script type="text/javascript">
-    console.log("testrrr");
     new WOW().init();
 </script>
 
 <!--Home Section-->
 <section id="home" class="home wow fadeIn" data-wow-duration="0.9s" data-wow-delay=".2s">
     <div class="name">
-        <h1 class=" wow fadeInUp" data-wow-duration="0.9s" data-wow-delay=".9s">Nithin Suryadevara</h1>
-        <h5 class=" wow fadeInDown" data-wow-duration="0.9s" data-wow-delay=".4s">Web Developer | Front-End Developer</h5>
+        <h1 >Nithin Suryadevara</h1>
+        <h5 >Web Developer | Front-End Developer</h5>
     </div>
 </section>
 
@@ -65,7 +53,6 @@
 
 
 <script type="text/javascript">
-    console.log("test123");
     new WOW().init();
     </script>
 
