--- a/experience.html
+++ b/experience.html
@@ -13,6 +13,20 @@
 </head>
 <body>
 
+<!--Header Section-->
+<header>
+    <ul>
+        <li>
+            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.5s" href=".">Home</a>
+            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.6s" href="skills.html">Skills</a>
+            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.8s" href="experience.html">Experience</a>
+            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.7s" href="project.html">Projects</a>
+            <a class="wow fadeInDown" data-wow-duration=".5s" data-wow-delay="0.9s" href="contact.html">Contact</a>
+        </li>
+    </ul>
+</header>
+
+
 
 <!--experience Section-->
 <section id="experience" class="experience">
@@ -46,9 +60,6 @@
     </div>
 </section>
 
-<section>
-    <a href="index.html" class="navigation wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.8s"">Back</a>
-</section>
 
 <!--Jquery Cdn-->
 <script
