--- a/experience.html
+++ b/experience.html
@@ -13,6 +13,10 @@
 </head>
 <body>
 
+<!--particles-->
+<div id="particles-js">
+</div>
+
 <!--Header Section-->
 <header>
     <ul>
@@ -68,6 +72,9 @@
         crossorigin="anonymous"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha256-z6FznuNG1jo9PP3/jBjL6P3tvLMtSwiVAowZPOgo56U=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" integrity="sha256-+u54FaX9J+k40eAcg5K2YzICSQjrEYBI9gju5nE3HfY=" crossorigin="anonymous"></script>
+
+<script src="js/particle-script.js" ></script>
 
 
 <script type="text/javascript">
